--- a/FashionMNIST Challenge/submit.ipynb
+++ b/FashionMNIST Challenge/submit.ipynb
@@ -632,6 +632,214 @@
     "plt.axis([-10, 10, -10, 10])\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## 5.设计并训练NN算法对图片进行分类。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import random\n",
+    "import numpy as np\n",
+    "import tensorflow as tf\n",
+    "\n",
+    "# 设置按需使用GPU\n",
+    "config = tf.ConfigProto()\n",
+    "config.gpu_options.allow_growth = True\n",
+    "sess = tf.InteractiveSession(config=config)   # 启动计算图\n",
+    "\n",
+    "# 导入数据\n",
+    "train_x, train_y = read_tfrecord('mnist_train.tfrecords', 55000)\n",
+    "test_x, test_y = read_tfrecord('mnist_test.tfrecords', 10000)\n",
+    "\n",
+    "# 将  _y（labels）转换为one-hot 类型\n",
+    "# 1.转换函数\n",
+    "def dense_to_one_hot(labels_dense, num_classes=10):\n",
+    "    labels_dense = labels_dense.astype(np.uint8)   # 转换数据类型\n",
+    "    num_labels = labels_dense.shape[0]\n",
+    "    index_offset = np.arange(num_labels) * num_classes\n",
+    "    labels_one_hot = np.zeros((num_labels, num_classes))\n",
+    "    labels_one_hot.flat[index_offset + labels_dense.ravel()] = 1\n",
+    "    return labels_one_hot\n",
+    "# 2.函数实现\n",
+    "train_y = dense_to_one_hot(train_y, 10)\n",
+    "test_y = dense_to_one_hot(test_y, 10)\n",
+    "print(train_y.shape)\n",
+    "print(test_y.shape)\n",
+    "\n",
+    "\n",
+    "# min_next_batch_tfr(随机批次载入数据)\n",
+    "def min_next_batch_tfr(image, label, num=50): \n",
+    "    images = np.zeros((num, 784))\n",
+    "    labels = np.zeros((num, 10))\n",
+    "    for i in range(num):\n",
+    "        temp = random.randint(0, 54999)\n",
+    "        images[i, :] = image[temp]\n",
+    "        labels[i, :] = label[temp]\n",
+    "\n",
+    "    return images, labels\n",
+    "\n",
+    "\n",
+    "# 参数保存目录\n",
+    "FLAGS = tf.app.flags.FLAGS\n",
+    "# Basic model parameters.\n",
+    "tf.app.flags.DEFINE_string('cnn_path', './cnn_model', \"\"\"存放模型的目录\"\"\")\n",
+    "\n",
+    "tf.app.flags.DEFINE_string('cnn_parameters', 'mnist',\"\"\"模型的名称\"\"\")\n",
+    "\n",
+    "\n",
+    "# 构建网络, 写为函数，可以在网络中方便调用\n",
+    "\n",
+    "# 权值初始化，随机选取，返回的值中不会偏离均值的两倍差\n",
+    "def weight_variable(shape):\n",
+    "    # 用正态分布来初始化权值\n",
+    "    initial = tf.truncated_normal(shape, stddev=0.1)\n",
+    "    return tf.Variable(initial)\n",
+    "\n",
+    "# 偏值的初始化\n",
+    "def bias_variable(shape):\n",
+    "    # 本例中用relu激活函数，所以用一个很小的正偏置较好\n",
+    "    initial = tf.constant(0.1, shape=shape)\n",
+    "    return tf.Variable(initial)\n",
+    "\n",
+    "# 定义卷积层\n",
+    "def conv2d(x, W):\n",
+    "    # 默认 strides[0]=strides[3]=1, strides[1]为x方向步长，strides[2]为y方向步长\n",
+    "    return tf.nn.conv2d(x, W, strides=[1, 1, 1, 1], padding='SAME')    # 返回feature map\n",
+    "\n",
+    "# 定义池化层\n",
+    "def max_pool_2x2(x):\n",
+    "    return tf.nn.max_pool(x, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='SAME')\n",
+    "\n",
+    "#模型文件所在的文件夹，是否存在，如果不存在，则创建文件夹\n",
+    "ckpt = tf.train.latest_checkpoint(FLAGS.cnn_path)\n",
+    "if not ckpt:\n",
+    "    if not os.path.exists(FLAGS.cnn_path):\n",
+    "        os.mkdir(FLAGS.cnn_path)\n",
+    "\n",
+    "# X_ 是手写图像的像素值， y是图像对应的标签\n",
+    "X_ = tf.placeholder(tf.float32, [None, 784])\n",
+    "y_ = tf.placeholder(tf.float32, [None, 10])\n",
+    "\n",
+    "# 把X转为卷积所需要的形式\n",
+    "# 输入层为输入的灰度图像尺寸\n",
+    "X = tf.reshape(X_, [-1, 28, 28, 1])\n",
+    "# 第一层卷积：5×5×1卷积核32个 [5，5，1，32],h_conv1.shape=[-1, 28, 28, 32]\n",
+    "W_conv1 = weight_variable([5, 5, 1, 32])  # 卷积核的大小、深度和数量\n",
+    "b_conv1 = bias_variable([32])\n",
+    "h_conv1 = tf.nn.relu(conv2d(X, W_conv1) + b_conv1)\n",
+    "\n",
+    "# 第一个池化层[-1, 28, 28, 32]->[-1, 14, 14, 32]\n",
+    "h_pool1 = max_pool_2x2(h_conv1)\n",
+    "\n",
+    "# 第二层卷积：5×5×32卷积核64个 [5，5，32，64],h_conv2.shape=[-1, 14, 14, 64]\n",
+    "W_conv2 = weight_variable([5, 5, 32, 64])  # 卷积核的大小、深度和数量\n",
+    "b_conv2 = bias_variable([64])\n",
+    "h_conv2 = tf.nn.relu(conv2d(h_pool1, W_conv2) + b_conv2)\n",
+    "\n",
+    "# 第二个池化层,[-1, 14, 14, 64]->[-1, 7, 7, 64] \n",
+    "h_pool2 = max_pool_2x2(h_conv2)\n",
+    "\n",
+    "# flatten层，[-1, 7, 7, 64]->[-1, 7*7*64],即每个样本得到一个7*7*64维的样本\n",
+    "h_pool2_flat = tf.reshape(h_pool2, [-1, 7*7*64])\n",
+    "\n",
+    "# 全连接层，隐藏层节点为1024个\n",
+    "# 权值初始化\n",
+    "W_fc1 = weight_variable([7*7*64, 1024])\n",
+    "b_fc1 = bias_variable([1024])\n",
+    "h_fc1 = tf.nn.relu(tf.matmul(h_pool2_flat, W_fc1) + b_fc1)\n",
+    "\n",
+    "# 全连接隐藏层/输出层\n",
+    "# 为了防止网络出现过拟合的情况,对全连接隐藏层进行 Dropout(正则化)处理,在训练过程中随机的丢弃部分\n",
+    "# 节点的数据来防止过拟合.Dropout同把节点数据设置为0来丢弃一些特征值,仅在训练过程中,\n",
+    "# 预测的时候,仍使用全数据特征\n",
+    "# 传入丢弃节点数据的比例\n",
+    "# dropout: 输出的维度和h_fc1一样，只是随机部分值被值为零\n",
+    "keep_prob = tf.placeholder(tf.float32)   # 正则化，丢弃比例\n",
+    "h_fc1_drop = tf.nn.dropout(h_fc1, keep_prob)\n",
+    "\n",
+    "# 输出层与全连接隐藏层之间\n",
+    "# 隐藏层与输出层权重初始化\n",
+    "W_fc2 = weight_variable([1024, 10])\n",
+    "b_fc2 = bias_variable([10])\n",
+    "\n",
+    "# 激活后的输出\n",
+    "y_conv = tf.nn.softmax(tf.matmul(h_fc1_drop, W_fc2) + b_fc2)\n",
+    "\n",
+    "\n",
+    "# 训练和评估\n",
+    "\n",
+    "# 1.损失函数：cross_entropy  交叉熵代价函数\n",
+    "cross_entropy = -tf.reduce_sum(y_*tf.log(y_conv))\n",
+    "# 2.优化函数：AdamOptimizer\n",
+    "train_step = tf.train.AdamOptimizer(1e-4).minimize(cross_entropy)\n",
+    "\n",
+    "# 3.预测准确结果统计\n",
+    "# 预测值中最大值（１）即分类结果，是否等于原始标签中的（１）的位置。argmax()取最大值所在的下标\n",
+    "correct_prediction = tf.equal(tf.argmax(y_conv, 1), tf.argmax(y_, 1))\n",
+    "# 准确率\n",
+    "accuracy = tf.reduce_mean(tf.cast(correct_prediction, \"float\"))\n",
+    "\n",
+    "# 保存\n",
+    "saver = tf.train.Saver(max_to_keep=2)\n",
+    "\n",
+    "# 全局初始化\n",
+    "sess.run(tf.global_variables_initializer())\n",
+    "writer = tf.summary.FileWriter(FLAGS.cnn_path, sess.graph)\n",
+    "\n",
+    "ckpt = tf.train.latest_checkpoint(FLAGS.cnn_path)\n",
+    "step = 0\n",
+    "if ckpt:\n",
+    "    saver.restore(sess=sess, save_path=ckpt)\n",
+    "    step = int(ckpt[len(os.path.join(FLAGS.cnn_path, FLAGS.cnn_parameters)) + 1:])\n",
+    "\n",
+    "# 开启线程\n",
+    "coord = tf.train.Coordinator()\n",
+    "threads = tf.train.start_queue_runners(sess=sess, coord=coord)\n",
+    "# 训练\n",
+    "# for i in range(20000):   ## 20000\n",
+    "#     batch = min_next_batch_tfr(train_x, train_y, 50)\n",
+    "#     if i % 1000 == 0:   ## 1000\n",
+    "#         train_accuracy = accuracy.eval(feed_dict={\n",
+    "#             X_: batch[0], y_: batch[1], keep_prob: 1.0})\n",
+    "#         print(\"step %d, training accuracy %g\" % (i, train_accuracy))\n",
+    "#         ckptname=os.path.join(FLAGS.cnn_path, FLAGS.cnn_parameters)\n",
+    "#         saver.save(sess,ckptname,global_step=i)\n",
+    "#     train_step.run(feed_dict={X_: batch[0], y_: batch[1], keep_prob: 0.5})\n",
+    "    \n",
+    "# 测试\n",
+    "# print(\"test accuracy %g\" % accuracy.eval(feed_dict={\n",
+    "#     X_: test_x, y_: test_y, keep_prob: 1.0}))\n",
+    "for j in range(200):\n",
+    "    testSample_start = j * 50      # start num of test sample of one batch\n",
+    "    testSample_end = (j + 1) * 50  # end num of test sample of one batch <use batch as the capacity of GPU is limited>\n",
+    "    Ytemp = y_conv.eval(feed_dict={X_: test_x, keep_prob: 1.0})\n",
+    "    Y = np.argmax(Ytemp[1])\n",
+    "    print(Y)\n",
+    "    print('test %d accuracy %g' % (j, accuracy.eval(session=sess, feed_dict={\n",
+    "        X_: test_x[testSample_start:testSample_end],\n",
+    "        y_: test_y[testSample_start:testSample_end], keep_prob: 1.0})))  # feed data for test\n",
+    "# print(sess.run(y_conv))\n",
+    "coord.request_stop() \n",
+    "coord.join(threads)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
@@ -639,6 +847,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
