--- a/FashionMNIST Challenge/submit.ipynb
+++ b/FashionMNIST Challenge/submit.ipynb
@@ -809,29 +809,22 @@
     "coord = tf.train.Coordinator()\n",
     "threads = tf.train.start_queue_runners(sess=sess, coord=coord)\n",
     "# 训练\n",
-    "# for i in range(20000):   ## 20000\n",
-    "#     batch = min_next_batch_tfr(train_x, train_y, 50)\n",
-    "#     if i % 1000 == 0:   ## 1000\n",
-    "#         train_accuracy = accuracy.eval(feed_dict={\n",
-    "#             X_: batch[0], y_: batch[1], keep_prob: 1.0})\n",
-    "#         print(\"step %d, training accuracy %g\" % (i, train_accuracy))\n",
-    "#         ckptname=os.path.join(FLAGS.cnn_path, FLAGS.cnn_parameters)\n",
-    "#         saver.save(sess,ckptname,global_step=i)\n",
-    "#     train_step.run(feed_dict={X_: batch[0], y_: batch[1], keep_prob: 0.5})\n",
+    "for i in range(20000):   ## 20000\n",
+    "    batch = min_next_batch_tfr(train_x, train_y, 50)\n",
+    "    if i % 1000 == 0:   ## 1000\n",
+    "        train_accuracy = accuracy.eval(feed_dict={\n",
+    "             X_: batch[0], y_: batch[1], keep_prob: 1.0})\n",
+    "        print(\"step %d, training accuracy %g\" % (i, train_accuracy))\n",
+    "                ckptname=os.path.join(FLAGS.cnn_path, FLAGS.cnn_parameters)\n",
+    "        saver.save(sess,ckptname,global_step=i)\n",
+    "train_step.run(feed_dict={X_: batch[0], y_: batch[1], keep_prob: 0.5})\n",
     "    \n",
-    "# 测试\n",
-    "# print(\"test accuracy %g\" % accuracy.eval(feed_dict={\n",
-    "#     X_: test_x, y_: test_y, keep_prob: 1.0}))\n",
     "for j in range(200):\n",
-    "    testSample_start = j * 50      # start num of test sample of one batch\n",
-    "    testSample_end = (j + 1) * 50  # end num of test sample of one batch <use batch as the capacity of GPU is limited>\n",
-    "    Ytemp = y_conv.eval(feed_dict={X_: test_x, keep_prob: 1.0})\n",
-    "    Y = np.argmax(Ytemp[1])\n",
-    "    print(Y)\n",
+    "    testSample_start = j * 50      \n",
+    "    testSample_end = (j + 1) * 50  \n",
     "    print('test %d accuracy %g' % (j, accuracy.eval(session=sess, feed_dict={\n",
     "        X_: test_x[testSample_start:testSample_end],\n",
-    "        y_: test_y[testSample_start:testSample_end], keep_prob: 1.0})))  # feed data for test\n",
-    "# print(sess.run(y_conv))\n",
+    "        y_: test_y[testSample_start:testSample_end], keep_prob: 1.0})))  # f喂数据\n",
     "coord.request_stop() \n",
     "coord.join(threads)\n"
    ]
