--- a/FashionMNIST Challenge/submit.ipynb
+++ b/FashionMNIST Challenge/submit.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -645,10 +645,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import random\n",
@@ -809,15 +815,15 @@
     "coord = tf.train.Coordinator()\n",
     "threads = tf.train.start_queue_runners(sess=sess, coord=coord)\n",
     "# 训练\n",
-    "for i in range(20000):   ## 20000\n",
-    "    batch = min_next_batch_tfr(train_x, train_y, 50)\n",
-    "    if i % 1000 == 0:   ## 1000\n",
-    "        train_accuracy = accuracy.eval(feed_dict={\n",
-    "             X_: batch[0], y_: batch[1], keep_prob: 1.0})\n",
-    "        print(\"step %d, training accuracy %g\" % (i, train_accuracy))\n",
-    "                ckptname=os.path.join(FLAGS.cnn_path, FLAGS.cnn_parameters)\n",
-    "        saver.save(sess,ckptname,global_step=i)\n",
-    "train_step.run(feed_dict={X_: batch[0], y_: batch[1], keep_prob: 0.5})\n",
+    "# for i in range(20000):   ## 20000\n",
+    "#     batch = min_next_batch_tfr(train_x, train_y, 50)\n",
+    "#     if i % 1000 == 0:   ## 1000\n",
+    "#         train_accuracy = accuracy.eval(feed_dict={\n",
+    "#              X_: batch[0], y_: batch[1], keep_prob: 1.0})\n",
+    "#         print(\"step %d, training accuracy %g\" % (i, train_accuracy))\n",
+    "#                 ckptname=os.path.join(FLAGS.cnn_path, FLAGS.cnn_parameters)\n",
+    "#         saver.save(sess,ckptname,global_step=i)\n",
+    "# train_step.run(feed_dict={X_: batch[0], y_: batch[1], keep_prob: 0.5})\n",
     "    \n",
     "for j in range(200):\n",
     "    testSample_start = j * 50      \n",
