--- a/FashionMNIST Challenge/submit.ipynb
+++ b/FashionMNIST Challenge/submit.ipynb
@@ -644,14 +644,223 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
+      "0\n",
+      "10000\n",
+      "20000\n",
+      "30000\n",
+      "40000\n",
+      "50000\n",
+      "0\n",
+      "(55000, 10)\n",
+      "(10000, 10)\n",
+      "INFO:tensorflow:Restoring parameters from ./cnn_model/mnist-19000\n",
+      "test 0 accuracy 0.92\n",
+      "test 1 accuracy 0.96\n",
+      "test 2 accuracy 0.96\n",
+      "test 3 accuracy 0.9\n",
+      "test 4 accuracy 0.98\n",
+      "test 5 accuracy 0.92\n",
+      "test 6 accuracy 0.96\n",
+      "test 7 accuracy 0.9\n",
+      "test 8 accuracy 0.96\n",
+      "test 9 accuracy 0.92\n",
+      "test 10 accuracy 0.88\n",
+      "test 11 accuracy 0.96\n",
+      "test 12 accuracy 0.88\n",
+      "test 13 accuracy 0.9\n",
+      "test 14 accuracy 0.9\n",
+      "test 15 accuracy 0.98\n",
+      "test 16 accuracy 0.94\n",
+      "test 17 accuracy 0.9\n",
+      "test 18 accuracy 0.9\n",
+      "test 19 accuracy 0.9\n",
+      "test 20 accuracy 0.92\n",
+      "test 21 accuracy 0.84\n",
+      "test 22 accuracy 0.96\n",
+      "test 23 accuracy 0.86\n",
+      "test 24 accuracy 0.94\n",
+      "test 25 accuracy 0.88\n",
+      "test 26 accuracy 0.92\n",
+      "test 27 accuracy 0.94\n",
+      "test 28 accuracy 0.9\n",
+      "test 29 accuracy 0.92\n",
+      "test 30 accuracy 0.94\n",
+      "test 31 accuracy 0.96\n",
+      "test 32 accuracy 0.9\n",
+      "test 33 accuracy 0.94\n",
+      "test 34 accuracy 0.94\n",
+      "test 35 accuracy 0.94\n",
+      "test 36 accuracy 1\n",
+      "test 37 accuracy 0.86\n",
+      "test 38 accuracy 0.92\n",
+      "test 39 accuracy 0.88\n",
+      "test 40 accuracy 0.98\n",
+      "test 41 accuracy 0.88\n",
+      "test 42 accuracy 0.94\n",
+      "test 43 accuracy 0.9\n",
+      "test 44 accuracy 0.94\n",
+      "test 45 accuracy 0.96\n",
+      "test 46 accuracy 0.84\n",
+      "test 47 accuracy 0.94\n",
+      "test 48 accuracy 0.88\n",
+      "test 49 accuracy 0.9\n",
+      "test 50 accuracy 0.88\n",
+      "test 51 accuracy 0.86\n",
+      "test 52 accuracy 0.94\n",
+      "test 53 accuracy 0.9\n",
+      "test 54 accuracy 0.94\n",
+      "test 55 accuracy 0.86\n",
+      "test 56 accuracy 0.88\n",
+      "test 57 accuracy 0.76\n",
+      "test 58 accuracy 0.88\n",
+      "test 59 accuracy 0.98\n",
+      "test 60 accuracy 0.9\n",
+      "test 61 accuracy 0.86\n",
+      "test 62 accuracy 0.94\n",
+      "test 63 accuracy 0.98\n",
+      "test 64 accuracy 0.88\n",
+      "test 65 accuracy 0.82\n",
+      "test 66 accuracy 0.94\n",
+      "test 67 accuracy 0.88\n",
+      "test 68 accuracy 0.84\n",
+      "test 69 accuracy 0.84\n",
+      "test 70 accuracy 0.96\n",
+      "test 71 accuracy 0.86\n",
+      "test 72 accuracy 0.92\n",
+      "test 73 accuracy 0.92\n",
+      "test 74 accuracy 0.9\n",
+      "test 75 accuracy 0.9\n",
+      "test 76 accuracy 0.86\n",
+      "test 77 accuracy 0.94\n",
+      "test 78 accuracy 0.92\n",
+      "test 79 accuracy 0.9\n",
+      "test 80 accuracy 0.88\n",
+      "test 81 accuracy 0.84\n",
+      "test 82 accuracy 0.86\n",
+      "test 83 accuracy 0.82\n",
+      "test 84 accuracy 0.98\n",
+      "test 85 accuracy 0.9\n",
+      "test 86 accuracy 0.94\n",
+      "test 87 accuracy 0.9\n",
+      "test 88 accuracy 0.94\n",
+      "test 89 accuracy 0.94\n",
+      "test 90 accuracy 0.96\n",
+      "test 91 accuracy 0.94\n",
+      "test 92 accuracy 0.9\n",
+      "test 93 accuracy 0.94\n",
+      "test 94 accuracy 0.9\n",
+      "test 95 accuracy 0.88\n",
+      "test 96 accuracy 0.92\n",
+      "test 97 accuracy 0.92\n",
+      "test 98 accuracy 0.92\n",
+      "test 99 accuracy 0.88\n",
+      "test 100 accuracy 0.94\n",
+      "test 101 accuracy 0.9\n",
+      "test 102 accuracy 0.86\n",
+      "test 103 accuracy 0.92\n",
+      "test 104 accuracy 0.9\n",
+      "test 105 accuracy 0.96\n",
+      "test 106 accuracy 0.94\n",
+      "test 107 accuracy 0.94\n",
+      "test 108 accuracy 0.78\n",
+      "test 109 accuracy 0.92\n",
+      "test 110 accuracy 0.9\n",
+      "test 111 accuracy 0.84\n",
+      "test 112 accuracy 0.82\n",
+      "test 113 accuracy 0.92\n",
+      "test 114 accuracy 0.9\n",
+      "test 115 accuracy 0.9\n",
+      "test 116 accuracy 0.96\n",
+      "test 117 accuracy 0.9\n",
+      "test 118 accuracy 0.94\n",
+      "test 119 accuracy 0.88\n",
+      "test 120 accuracy 0.92\n",
+      "test 121 accuracy 0.88\n",
+      "test 122 accuracy 0.94\n",
+      "test 123 accuracy 0.94\n",
+      "test 124 accuracy 0.92\n",
+      "test 125 accuracy 0.94\n",
+      "test 126 accuracy 0.84\n",
+      "test 127 accuracy 0.92\n",
+      "test 128 accuracy 0.92\n",
+      "test 129 accuracy 0.92\n",
+      "test 130 accuracy 0.8\n",
+      "test 131 accuracy 0.98\n",
+      "test 132 accuracy 0.88\n",
+      "test 133 accuracy 0.92\n",
+      "test 134 accuracy 0.96\n",
+      "test 135 accuracy 0.84\n",
+      "test 136 accuracy 0.94\n",
+      "test 137 accuracy 0.92\n",
+      "test 138 accuracy 0.88\n",
+      "test 139 accuracy 0.9\n",
+      "test 140 accuracy 0.96\n",
+      "test 141 accuracy 0.92\n",
+      "test 142 accuracy 0.92\n",
+      "test 143 accuracy 0.9\n",
+      "test 144 accuracy 0.94\n",
+      "test 145 accuracy 0.9\n",
+      "test 146 accuracy 0.98\n",
+      "test 147 accuracy 0.96\n",
+      "test 148 accuracy 0.96\n",
+      "test 149 accuracy 0.92\n",
+      "test 150 accuracy 0.98\n",
+      "test 151 accuracy 0.94\n",
+      "test 152 accuracy 0.92\n",
+      "test 153 accuracy 0.96\n",
+      "test 154 accuracy 0.86\n",
+      "test 155 accuracy 0.94\n",
+      "test 156 accuracy 0.94\n",
+      "test 157 accuracy 0.9\n",
+      "test 158 accuracy 0.9\n",
+      "test 159 accuracy 0.88\n",
+      "test 160 accuracy 0.9\n",
+      "test 161 accuracy 0.88\n",
+      "test 162 accuracy 0.98\n",
+      "test 163 accuracy 0.94\n",
+      "test 164 accuracy 0.98\n",
+      "test 165 accuracy 0.94\n",
+      "test 166 accuracy 0.94\n",
+      "test 167 accuracy 0.92\n",
+      "test 168 accuracy 0.96\n",
+      "test 169 accuracy 0.96\n",
+      "test 170 accuracy 0.86\n",
+      "test 171 accuracy 0.92\n",
+      "test 172 accuracy 0.88\n",
+      "test 173 accuracy 0.94\n",
+      "test 174 accuracy 0.9\n",
+      "test 175 accuracy 0.96\n",
+      "test 176 accuracy 0.96\n",
+      "test 177 accuracy 0.86\n",
+      "test 178 accuracy 0.88\n",
+      "test 179 accuracy 0.88\n",
+      "test 180 accuracy 0.88\n",
+      "test 181 accuracy 0.9\n",
+      "test 182 accuracy 0.86\n",
+      "test 183 accuracy 0.84\n",
+      "test 184 accuracy 0.9\n",
+      "test 185 accuracy 0.92\n",
+      "test 186 accuracy 0.98\n",
+      "test 187 accuracy 0.98\n",
+      "test 188 accuracy 0.9\n",
+      "test 189 accuracy 0.94\n",
+      "test 190 accuracy 0.88\n",
+      "test 191 accuracy 0.9\n",
+      "test 192 accuracy 0.92\n",
+      "test 193 accuracy 0.96\n",
+      "test 194 accuracy 0.9\n",
+      "test 195 accuracy 0.94\n",
+      "test 196 accuracy 0.96\n",
+      "test 197 accuracy 0.88\n",
+      "test 198 accuracy 0.92\n",
+      "test 199 accuracy 0.98\n"
      ]
     }
    ],
@@ -815,15 +1024,15 @@
     "coord = tf.train.Coordinator()\n",
     "threads = tf.train.start_queue_runners(sess=sess, coord=coord)\n",
     "# 训练\n",
-    "# for i in range(20000):   ## 20000\n",
-    "#     batch = min_next_batch_tfr(train_x, train_y, 50)\n",
-    "#     if i % 1000 == 0:   ## 1000\n",
-    "#         train_accuracy = accuracy.eval(feed_dict={\n",
-    "#              X_: batch[0], y_: batch[1], keep_prob: 1.0})\n",
-    "#         print(\"step %d, training accuracy %g\" % (i, train_accuracy))\n",
-    "#                 ckptname=os.path.join(FLAGS.cnn_path, FLAGS.cnn_parameters)\n",
-    "#         saver.save(sess,ckptname,global_step=i)\n",
-    "# train_step.run(feed_dict={X_: batch[0], y_: batch[1], keep_prob: 0.5})\n",
+    "for i in range(20000):   ## 20000\n",
+    "    batch = min_next_batch_tfr(train_x, train_y, 50)\n",
+    "    if i % 1000 == 0:   ## 1000\n",
+    "        train_accuracy = accuracy.eval(feed_dict={\n",
+    "             X_: batch[0], y_: batch[1], keep_prob: 1.0})\n",
+    "        print(\"step %d, training accuracy %g\" % (i, train_accuracy))\n",
+    "                ckptname=os.path.join(FLAGS.cnn_path, FLAGS.cnn_parameters)\n",
+    "        saver.save(sess,ckptname,global_step=i)\n",
+    "train_step.run(feed_dict={X_: batch[0], y_: batch[1], keep_prob: 0.5})\n",
     "    \n",
     "for j in range(200):\n",
     "    testSample_start = j * 50      \n",
