--- a/Vehicle_License_Plate_Recognition/code/submit.ipynb
+++ b/Vehicle_License_Plate_Recognition/code/submit.ipynb
@@ -1316,13 +1316,12 @@
     "* 优化算法为`AdamOptimizer()`\n",
     "* 在进行训练中，全连接层为了防止模型过拟合，使用了`dropout`\n",
     "* 为了增强模型测试的健壮性，增加了滑动平均模型，与优化算法捆绑更新\n",
+    "\n",
     "### 7.2 学习总结\n",
     "* 激活函数使用`relu`时，训练到一定次数，`loss`变为`nan`,发生了梯度爆炸，为了在一定程度上避免，将`relu`替换为`prelu`,通过修改`alpha`，找到最适合模型的值\n",
     "* 了解了滑动平均模型与优化算法中学习率的关系\n",
     "* 使用plt进行图片显示时，最后要记得写上`plt.show()`\n",
-    "* 使用git,当无法push文件时，可以强制使用：`git push origin +master`\n",
-    "\n",
-    "\n"
+    "* 使用git,当无法push文件时，可以强制使用：`git push origin +master`\n"
    ]
   }
  ],
